# conda-solver-api

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  update-lockfile.yml
benchmarks/: large.yml  medium.yml  results-fixed.json  results-fixed.md  results.json  results.md  small.yml
conda_presto/: __init__.py  app.py  cli.py  config.py  exceptions.py  exporter.py  plugin.py  resolve.py
conda_resolve/: __init__.py  app.py  cli.py  config.py  plugin.py  resolve.py
conda_solver_api/: __init__.py  app.py  cli.py  plugin.py  resolve.py
docker/: cli.Dockerfile  server.Dockerfile
examples/: environment.yml
plans/: 01-transcoder.md  02-lint.md  03-why-not.md  04-permalink.md  05-receipt.md  06-attestation.md  07-serving-attestations.md  08-admit.md  09-github-action.md  10-meta-mcp.md  11-diff.md  12-explain.md  13-preflight.md  14-cep-solve-attestation.md  README.md
tests/: conftest.py  test_app.py  test_benchmarks.py  test_cli.py  test_config.py  test_exporter.py  test_plugin.py  test_resolve.py
