[build-system]
requires = ["hatchling>=1.12.2"]
build-backend = "hatchling.build"

[project]
name = "conda-presto"
version = "0.3.0"
description = "Resolve conda environment.yml files to fully pinned package lists with SHA256 hashes"
license = "BSD-3-Clause"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
conda-presto = "conda_presto.cli:main"

[project.entry-points.conda]
"conda-presto" = "conda_presto.plugin"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "FA",
    "I",
    "ISC",
    "T10",
    "UP",
    "W",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v --benchmark-disable --cov=conda_presto --cov-report=term-missing"
markers = ["crossplatform: tests that solve for non-native platforms (deselect with -m 'not crossplatform')"]

[tool.coverage.run]
source = ["conda_presto"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.pixi.workspace]
channels = ["conda-canary/label/dev", "conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.13,<3.14"
conda = ">=25.3"
conda-rattler-solver = ">=0.0.6,<0.0.7"
pyyaml = ">=6.0"
msgspec = ">=0.19"

[tool.pixi.pypi-dependencies]
conda-presto = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.9"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0"
pytest-benchmark = ">=5.0"
pytest-cov = ">=6.0"
httpx = ">=0.28"
anyio = ">=4.0"

[tool.pixi.feature.server.dependencies]
litestar = ">=2.18"
uvicorn = ">=0.34"
brotli-python = ">=1.1"

[tool.pixi.environments]
dev = { features = ["dev", "server"], solve-group = "default" }
test = { features = ["test", "server"], solve-group = "default" }
prod = { features = ["server"], solve-group = "default" }
cli = { solve-group = "default" }

[tool.pixi.activation.env]
CONDA_CHANNEL_PRIORITY = "strict"
CONDA_NO_LOCK = "true"
CONDA_UNSATISFIABLE_HINTS = "false"
CONDA_NUMBER_CHANNEL_NOTICES = "0"
CONDA_AGGRESSIVE_UPDATE_PACKAGES = ""
CONDA_LOCAL_REPODATA_TTL = "300"
CONDA_JSON = "true"
CONDA_SOLVER = "rattler"

[tool.pixi.tasks]
lint = { cmd = "ruff check conda_presto tests", description = "Check code style" }
format = { cmd = "ruff format conda_presto tests", description = "Auto-format code" }
test = { cmd = "pytest", description = "Run tests" }
bench = { cmd = "pytest tests/test_benchmarks.py --benchmark-enable", description = "Run benchmarks" }
serve = { cmd = "uvicorn conda_presto.app:app --reload", description = "Run dev server" }
solve = { cmd = "conda-presto", description = "Run a solve" }
